# quorate

./: .eslintrc.json  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  README.tpl  entrypoint.sh  netlify.toml  nginx.conf  package-lock.json  package.json  requirements.txt  vue.config.js
.api/: api.json
.api/apis/proxy-solver/: index.d.ts  index.js  openapi.json  package-lock.json  package.json  schemas.d.ts  types.d.ts
.github/workflows/: ci.yml
app/: constants.py  main.py
proxy_solver_api/: Cargo.toml  Makefile
proxy_solver_api/resources/tests/: test_big.result.json
proxy_solver_api/src/: main.rs
quorate/: package-lock.json  package.json
resources/tests/: test_big.json  test_big.result.json
src/: App.vue  constants.js  main.js  main.rs  member.rs  metrics.rs  problem.rs  rules.js  solution.rs  solver.js
src/components/: AssignProxies.vue  AssignProxiesStep.vue  AttendanceWizard.vue  LoadingOverlay.vue  LoginDialog.vue  Readout.vue  ReadoutStep.vue  TakeAttendance.vue  TakeAttendanceStep.vue  Wizard.vue
src/store/: index.js
